--- a/package.json
+++ b/package.json
@@ -6,29 +6,35 @@
   "module": "build/react-web-monetization.module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --write '*.js' '{src,example}/**/*.js'",
-    "build": "NODE_ENV='production' rollup -c rollup.config.babel.js"
+    "prettier": "prettier --write '*.js' '{src,example}/**/*.{js,ts,tsx}'",
+    "build": "NODE_ENV='production' rollup -c"
   },
   "author": "ben@sharafian.me",
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.0.2",
-    "babel-register": "^6.26.0",
-    "prettier": "^1.18.2",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "prettier": "^2.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "rollup": "^1.26.3",
-    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-ts": "^1.4.0",
+    "tslib": "^2.2.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "types-wm": "^1.1.0"
+  },
+  "peerDependenciesMeta": {
+    "types-wm": {
+      "optional": true
+    }
   }
 }
